adjust body html and background size to stop jump

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,16 @@
     border: 0;
 }
 
+/*body and html*/
+body, html {
+      height: 100%;
+        width: 100%;
+        }
+
 /*background image span*/
 #background {
-    min-height: 100vh;
-    min-width: 100vw;
+    min-height: 100%;
+    min-width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
